added video count to website

--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -783,7 +783,7 @@
             </div>
             <button @click="showOldVideos" class="material-icons">delete</button>
 
-            <p class="Title" style="margin-left: auto">{{filter}}</p>
+            <p class="Title" style="margin-left: auto">{{filter}} - {{filteredVideos.length}}</p>
 
             <button @click="switchDesign" style="margin-left: auto;" class="material-icons">highlight</button>
             <button @click="showSettings" class="material-icons">settings_applications</button>
