--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -239,6 +239,17 @@
             font-size: 13px;
         }
 
+        .videoDesc p {
+            max-height: 2.4em;
+            line-height: 1.2em;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            display: -webkit-box;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            width: 80%;
+        }
+
         .overlay {
             position: fixed;
             top: 40px;
@@ -709,7 +720,7 @@
                                     </tr>
                                     <tr style="height:100px">
                                         <td class="videoDesc">
-                                            <p style="margin-top:5px">{{video.description1}}<br>{{video.description2}} </p>
+                                            <p style="margin-top:5px">{{video.description}} </p>
                                         </td>
                                     </tr>
                                 </table>
@@ -757,7 +768,7 @@
                                     </tr>
                                     <tr style="height:100px">
                                         <td class="videoDesc">
-                                            <p style="margin-top:5px">{{video.description1}}<br>{{video.description2}} </p>
+                                            <p style="margin-top:5px">{{video.description}} </p>
                                         </td>
                                     </tr>
                                 </table>
@@ -816,7 +827,7 @@
                             </tr>
                             <tr style="height:50px">
                                 <td class="videoDesc">
-                                    <p style="margin-top:5px">{{video.description1}}<br>{{video.description2}} </p>
+                                    <p style="margin-top:5px">{{video.description}}</p>
                                 </td>
                             </tr>
                             <tr>
@@ -861,7 +872,7 @@
                             </tr>
                             <tr style="height:100px">
                                 <td class="videoDesc">
-                                    <p style="margin-top:5px">{{video.description1}}<br>{{video.description2}} </p>
+                                    <p style="margin-top:5px">{{video.description}}</p>
                                 </td>
                             </tr>
                         </table>
